--- a/templates/index.html
+++ b/templates/index.html
@@ -20,8 +20,8 @@
         <br>
 
         <div class="container" align="left">
-            <a href="/return-files/" target="blank"><button class='btn btn-default'>Download</button></a>
-       </div>
+            <a href="{{ url_for('download', filename="downloadFile.txt") }}">File</a>
+        </div>
 
         
 
