--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,47 +9,19 @@
 .btn-primary:hover, .btn-primary:active, .btn-primary.active, .btn-primary.disabled, .btn-primary[disabled] { filter: none; background-color: #4a77d4; }
 .btn-block { width: 100%; display:block; }
 
-* { -webkit-box-sizing:border-box; -moz-box-sizing:border-box; -ms-box-sizing:border-box; -o-box-sizing:border-box; box-sizing:border-box; }
+* { -webkit-box-sizing:border-box; -moz-box-sizing:border-box; -ms-box-sizing:border-box; -o-box-sizing:border-box; box-sizing:border-box;	font-family:"DM Sans";}
 
 html { width: 100%; height:100%; }
 
-body { 
-	width: 100%;
-	height:100%;
-	font-family: 'Open Sans', sans-serif;
-	/* background: #092756; */
-	color: #fff;
-	font-size: 18px;
-	text-align:center;
-	letter-spacing:1.2px;
-	background: linear-gradient(to right, rgba(2, 18, 63, 0.836) 0%,rgba(0, 37, 92, 0.603) 50%,rgba(0, 99, 247, 0.849) 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3E1D6D', endColorstr='#092756',GradientType=1 );
-
-}
-.login { 
-	position: absolute;
-	top: 30%;
-	left: 50%;
-	margin: -150px 0 0 -150px;
-	width:400px;
-	height:400px;
-	margin:none;
-	padding:none;
-}
-
-.login h1 { color: rgb(219, 219, 219); text-shadow: 0 0 10px rgba(0,0,0,0.3); letter-spacing:1px; text-align:center; }
-
-input { 
-	width: 25%; 
+input {
+	width:300px;
 	margin-bottom: 10px; 
-	background: rgba(0,0,0,0.96);
 	border: none;
 	outline: none;
 	padding: 10px;
 	font-size: 13px;
-	color: rgb(255, 255, 255);
-	/* text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.3); */
-	border: 1px solid rgba(0,0,0,0.3);
+	border: 1px solid;
+	border-color: #E1E3E6;
 	border-radius: 4px;
 	box-shadow: inset 0 -5px 45px rgba(255, 255, 255, 0.2), 0 1px 1px rgba(0, 0, 0, 0.2);
 	-webkit-transition: box-shadow .5s ease;
@@ -58,19 +30,21 @@ input {
 	-ms-transition: box-shadow .5s ease;
 	transition: box-shadow .5s ease;
 }
-input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgba(255,255,255,0.2); }
+
+.submit{
+	background-color: #4D72F8;
+	color:#ffffff;
+	border-color: #4D72F8;
+}
 
 select {
-	width: 25%; 
+	width:300px;
 	margin-bottom: 10px; 
-	background: rgba(0,0,0,0.96);
 	border: none;
 	outline: none;
 	padding: 10px;
 	font-size: 13px;
-	color: rgb(255, 255, 255);
-	/* text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.3); */
-	border: 1px solid rgba(0,0,0,0.3);
+	border: 1px solid #E1E3E6;
 	border-radius: 4px;
 	box-shadow: inset 0 -5px 45px rgba(255, 255, 255, 0.2), 0 1px 1px rgba(0, 0, 0, 0.2);
 	-webkit-transition: box-shadow .5s ease;
@@ -79,4 +53,57 @@ select {
 	-ms-transition: box-shadow .5s ease;
 	transition: box-shadow .5s ease;
 }
-select:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgba(255,255,255,0.2); }
+
+.icon{
+	margin-left: 10%;
+	height:93px; 
+	width:93px;
+}
+
+.heading{
+	margin-left:300px;
+	color: #4D72F8;
+}
+.heading:before{
+	content:'Automatic ';
+	color: #404D61;
+}
+
+.divider{
+	margin-left: -10%;
+	margin-block-start: 2%;
+	color: #e42626;
+	height: 2px;
+	background-color: #404D61;
+}
+.desc{
+	margin-left: 10%;
+	margin-right: 10%;
+	color: #404D61;
+}
+
+.inputs{
+	margin-left: 10%;
+	margin-block-start: 5%;
+}
+.list li{
+	float: left;
+	margin:0 30px;
+}
+
+.down{
+	background-color: #4E73F808;
+	color:#000000;
+	margin-block-start: 2%;
+	width:100px;
+	height: 30px;
+	border-color: #4E73F8;
+	border-radius: 8%;
+	border-width: 1px;
+}
+
+.container{
+	margin-left: 10%;
+	margin-block-start: 5%;
+	display: block;
+}
