--- a/templates/index.html
+++ b/templates/index.html
@@ -9,14 +9,14 @@
     <link href='https://fonts.googleapis.com/css?family=Hind:300' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=DM Sans' rel='stylesheet'>
-    <link rel="stylesheet" href="static\css\style.css">
+    <link rel="stylesheet" href="..\static\css\style.css">
         
     <title>Automatic ML</title>
     
 </head>
 <body>
     <br>
-    <img src="icon.png" align=left class='icon'>
+    <img src="..\image\icon.png" align=left class='icon'>
     <h1 class='heading'>ML Renderer</h1>
     <br>
     <hr class='divider'>
