--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <br>
-    <img src="..\image\icon.png" align=left class='icon'>
+    <img src="..\static\icon.png" align=left class='icon'>
     <h1 class='heading'>ML Renderer</h1>
     <br>
     <hr class='divider'>
