--- a/static/css/style.css
+++ b/static/css/style.css
@@ -23,7 +23,6 @@ input {
 	border: 1px solid;
 	border-color: #E1E3E6;
 	border-radius: 4px;
-	box-shadow: inset 0 -5px 45px rgba(255, 255, 255, 0.2), 0 1px 1px rgba(0, 0, 0, 0.2);
 	-webkit-transition: box-shadow .5s ease;
 	-moz-transition: box-shadow .5s ease;
 	-o-transition: box-shadow .5s ease;
@@ -46,7 +45,6 @@ select {
 	font-size: 13px;
 	border: 1px solid #E1E3E6;
 	border-radius: 4px;
-	box-shadow: inset 0 -5px 45px rgba(255, 255, 255, 0.2), 0 1px 1px rgba(0, 0, 0, 0.2);
 	-webkit-transition: box-shadow .5s ease;
 	-moz-transition: box-shadow .5s ease;
 	-o-transition: box-shadow .5s ease;
@@ -54,14 +52,17 @@ select {
 	transition: box-shadow .5s ease;
 }
 
+h1,h2,h3,h4,h5,h6{
+	color: #404D61;
+}
 .icon{
-	margin-left: 10%;
+	margin-left: 5%;
 	height:93px; 
 	width:93px;
 }
 
 .heading{
-	margin-left:300px;
+	margin-left:20%;
 	color: #4D72F8;
 }
 .heading:before{
@@ -73,8 +74,8 @@ select {
 	margin-left: -10%;
 	margin-block-start: 2%;
 	color: #e42626;
-	height: 2px;
-	background-color: #404D61;
+	height: 1px;
+	background-color: #E1E3E6;
 }
 .desc{
 	margin-left: 10%;
@@ -85,14 +86,11 @@ select {
 .inputs{
 	margin-left: 10%;
 	margin-block-start: 5%;
-}
-.list li{
-	float: left;
-	margin:0 30px;
+	display: flex;
 }
 
 .down{
-	background-color: #4E73F808;
+	background-color: #4E73F815;
 	color:#000000;
 	margin-block-start: 2%;
 	width:100px;
@@ -105,5 +103,22 @@ select {
 .container{
 	margin-left: 10%;
 	margin-block-start: 5%;
+	padding-bottom: 5%;
 	display: block;
+}
+
+.main{
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.number{
+	padding-top: 1%;
+	margin: 2%;
+	width: 30px;
+	height: 30px;
+	border: 0.5px solid #4E73F8;
+	border-radius: 100%;
+	background-color: #4E73F815;
+	text-align:center;
 }
