--- a/templates/index.html
+++ b/templates/index.html
@@ -16,9 +16,11 @@
 
 <body>
     <br>
-    <img src="..\static\icon.png" align=left class='icon'>
+    <div class="header">
+    <img src="..\static\icon.png"  class='icon'>
     <h1 class='heading'>ML Renderer</h1>
     <br>
+    </div>
     <hr class='divider'>
     <br>
     <div class="desc">
