--- a/templates/index.html
+++ b/templates/index.html
@@ -7,10 +7,10 @@
     <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Arimo' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Hind:300' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=DM Sans' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="..\static\css\style.css">
-    <link rel="icon" href="..\static\icon.ico">
+    <link rel="icon" href="..\static\icon.ico">       
     <title>Automatic ML Renderer</title> 
 </head>
 
@@ -21,40 +21,20 @@
     <h1 class='heading'>ML Renderer</h1>
     <br>
     </div>
+    
     <hr class='divider'>
     <br>
     <div class="desc">
         <p>
-            <h2>The TIME has come for the you to bring Machine Learning to LIFE.</h2>
+            <h2>The TIME has come for you to bring Machine Learning to LIFE.</h2>
         <h3>You can now just add your dataset and get pre-trained model with the code.</h3>
         Even if you don't know to write a single line of code, you can get machine learning code rendered following just a few steps.
         <br>
         <ul>
             <li>
-                <h4>Step 1: <b>Upload your dataset in CSV format.</b></h4>   
-            </li>
-            <li>
-                <h4>Step 2: 
-                    <b>Choose the variable you wish to predict.</b></h4>
-            </li>
-            <li>
-                <h4>Step 3: 
-                    <b>Choose the type of algorithm.</b></h4>
-                    <ul>
-                        <li>
-                            <h4> Regression: If you want to predict the value of a particular entity.
-                            </h4>
-                        </li>
-                        <li>
-                            <h4> Classification: If you want to predict the class of a particular entity.
-                            </h4>
-                        </li>
-                    </ul>
+                <h4>Step 1: <b>Upload your dataset in CSV format on this page and click on submit. You will be redirected to a new page.</b></h4>   
             </li>
             
-            <li>
-                <h4>Step 4: <b>You can download your machine learning code by clicking the download button.</b></h4>
-            </li>
         </ul>
         </p>
     </div>
@@ -65,38 +45,12 @@
                     <div class="number">
                         1
                     </div>
-                    <input type="file" name="csvfile">
+                    <input type="file" name="csvfile" class="input">
             </div>
-            <div class="inputs">
-                <div class="number">
-                    2
-                </div>
-                <input type="text" name="target" placeholder="Enter the target variable" required="required" />
-            </div>
-        </div>
-            <br>
-        <div class="main">
-            <div class="inputs">
-                <div class="number">
-                    3
-                </div>
-                <select name="type" id="type">
-                        <option value="regression">Regression</option>
-                        <option value="classification">Classification</option>
-                </select>
-            </div>
-
             <div class="inputs">
                 <input type="submit" value="Submit" class="submit">
             </div>
         </div>
-    </form>
-
-    <div class="container">
-        {{ prediction_text }}
-        <br>
-        <a href="/return-files/" download><button class='down'>Download</button></a>
-    </div>
-
+     </form>
 </body>
 </html>
