--- a/templates/model.html
+++ b/templates/model.html
@@ -99,7 +99,9 @@
     <div class="container">
         {{ prediction_text }}
         <br>
-        <a href="/return-files/" download><button class='down'>Download</button></a>
+        <a href="/return-code/" download><button class='down'>Download Code</button></a>
+        <a href="/return-api/" download><button class='down'>Download API</button></a>
+
     </div>
 
 </body>
