--- a/templates/index.html
+++ b/templates/index.html
@@ -52,5 +52,9 @@
             </div>
         </div>
      </form>
+    
+    <footer class="footer" id="index_footer">
+        <p>Made with &#10084; by VinnovateIT</p>
+    </footer>
 </body>
 </html>
