--- a/templates/model.html
+++ b/templates/model.html
@@ -101,8 +101,13 @@
         <br>
         <a href="/return-code/" download><button class='down'>Download Code</button></a>
         <a href="/return-api/" download><button class='down'>Download API</button></a>
-
+        <br>
+        <p>Note: Please keep the downloaded code, API and dataset in the same folder.</p>
     </div>
+
+    <footer class="footer">
+        <p>Made with &#10084; by VinnovateIT</p>
+    </footer>
 
 </body>
 </html>
