--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,6 +13,11 @@
 
 html { width: 100%; height:100%; }
 
+body{
+	margin: 0;
+	padding: 0;
+}
+
 input {
 	width:300px;
 	margin-bottom: 10px; 
@@ -55,9 +60,6 @@ select {
 h1,h2,h3,h4,h5,h6{
 	color: #404D61;
 }
-
-
-
 
 .divider{
 	margin-left: -10%;
@@ -150,6 +152,19 @@ padding: 0;
 .heading:before{
 	content:'Automatic ';
 	color: #404D61;
+}
+
+.footer{
+	height:20px;
+    width: 100%;
+    background-color: #000000;
+    text-align: center;
+	color: #ffffff;
+	font-size: smaller;
+  }
+
+#index_footer{
+	margin-block-start: 13.8%;
 }
 
 @media screen and (max-width:510px)
