icon redirect and regression encoder issue fixed

--- a/templates/model.html
+++ b/templates/model.html
@@ -16,7 +16,7 @@
 <body>
     <br>
     <div class="header">
-    <img src="..\static\icon.png"  class='icon'>
+    <a href="https://automatic-ml-rendering.herokuapp.com/"><img src="..\static\icon.png"  class='icon'></a>
     <h1 class='heading'>ML Renderer</h1>
     <br>
     </div>
