--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
 <body>
     <br>
     <div class="header">
-    <img src="..\static\icon.png"  class='icon'>
+    <a href="https://automatic-ml-rendering.herokuapp.com/"><img src="..\static\icon.png"  class='icon'></a>
     <h1 class='heading'>ML Renderer</h1>
     <br>
     </div>
