--- a/templates/index.html
+++ b/templates/index.html
@@ -54,7 +54,7 @@
      </form>
     
     <footer class="footer" id="index_footer">
-        <p>Made with &#10084; by VinnovateIT</p>
+        <p>Made with &#10084; by <a href="https://vinnovateit.com/">VinnovateIT</a></p>
     </footer>
 </body>
 </html>
