--- a/templates/model.html
+++ b/templates/model.html
@@ -106,7 +106,7 @@
     </div>
 
     <footer class="footer">
-        <p>Made with &#10084; by VinnovateIT</p>
+        <p>Made with &#10084; by <a href="https://vinnovateit.com/">VinnovateIT</a></p>
     </footer>
 
 </body>
