--- a/templates/index.html
+++ b/templates/index.html
@@ -53,6 +53,19 @@
         </div>
      </form>
     
+     <!--Make a try now button which loads a csv-->
+     <div class="container">
+        <br>
+        <h3>Try now, Download CSV and train your first model now!</h3>
+        <a href="/return-csv/" download><button class='downc'>Download Sample CSV</button></a>
+        <br>
+        <p>Note: Please keep the downloaded code, API and dataset in the same folder.</p>
+    </div>
+
+    
+
+
+
     <footer class="footer" id="index_footer">
         <p>Made with &#10084; by <a href="https://vinnovateit.com/">VinnovateIT</a></p>
     </footer>
