Commited changes in index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -59,7 +59,7 @@
         <h3>Try now, Download CSV and train your first model now!</h3>
         <a href="/return-csv/" download><button class='downc'>Download Sample CSV</button></a>
         <br>
-        <p>Note: Please keep the downloaded code, API and dataset in the same folder.</p>
+        <p>Note: Create a new folder and save the dataset in the same.</p>
     </div>
 
     
