Added Sample Folder

--- a/templates/index.html
+++ b/templates/index.html
@@ -57,7 +57,7 @@
      <div class="container">
         <br>
         <h3>Try now, Download CSV and train your first model now!</h3>
-        <a href="/return-csv/" download><button class='downc'>Download Sample CSV</button></a>
+        <a href="/return-csv-json/" download><button class='downc'>Download Sample CSV & JSON</button></a>
         <br>
         <p>Note: Create a new folder and save the dataset in the same.</p>
     </div>
