--- a/templates/model.html
+++ b/templates/model.html
@@ -103,6 +103,7 @@
         <a href="/return-api/" download><button class='down'>Download API</button></a>
         <br>
         <p>Note: Please keep the downloaded code, API and dataset in the same folder.</p>
+        <a href=https://github.com/AviralJ58/automatic-ml-rendering/blob/main/README.md><button class='documentation'>Documentation</button></a>        
     </div>
 
     <footer class="footer">
