--- a/templates/index.html
+++ b/templates/index.html
@@ -55,19 +55,16 @@
     
      <!--Make a try now button which loads a csv-->
      <div class="container">
-        <br>
         <h3>Try now, Download CSV and train your first model now!</h3>
-        <a href="/return-csv-json/" download><button class='downc'>Download Sample CSV & JSON</button></a>
+        <a href="/return-csv-json/" download><button class='sample'>Download Sample CSV & JSON</button></a>
+        <a href=https://github.com/AviralJ58/automatic-ml-rendering/blob/main/README.md><button class='documentation'>Documentation</button></a>        
         <br>
         <p>Note: Create a new folder and save the dataset in the same.</p>
     </div>
 
-    
-
-
-
     <footer class="footer" id="index_footer">
         <p>Made with &#10084; by <a href="https://vinnovateit.com/">VinnovateIT</a></p>
     </footer>
+    
 </body>
 </html>
