--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,7 @@
      <!--Make a try now button which loads a csv-->
      <div class="container">
         <h3>Try now, Download CSV and train your first model now!</h3>
-        <a href="/return-csv-json/" download><button class='sample'>Download Sample CSV & JSON</button></a>
+        <a href="/return-csv-json/" download><button class='sample'>Download Sample CSV</button></a>
         <a href="/documentation/"><button class='documentation'>Documentation</button></a>        
         <br>
         <p>Note: Create a new folder and save the dataset in the same.</p>
