--- a/templates/model.html
+++ b/templates/model.html
@@ -103,7 +103,7 @@
         <a href="/return-api/" download><button class='down'>Download API</button></a>
         <br>
         <p>Note: Please keep the downloaded code, API and dataset in the same folder.</p>
-        <a href='/templates/documentation.html'><button class='documentation'>Documentation</button></a>        
+        <a href="/documentation/"><button class='documentation'>Documentation</button></a>          
     </div>
 
     <footer class="footer">
