Added requirement.txt generation

--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
                     <div class="number">
                         1
                     </div>
-                    <input type="file" name="csvfile" class="input">
+                    <input type="file" name="csvfile" class="input" required="required">
             </div>
             <div class="inputs">
                 <input type="submit" value="Submit" class="submit">
@@ -65,6 +65,8 @@
     <footer class="footer" id="index_footer">
         <p>Made with &#10084; by <a href="https://vinnovateit.com/">VinnovateIT</a></p>
     </footer>
+
+    
     
 </body>
 </html>
