--- a/templates/model.html
+++ b/templates/model.html
@@ -91,12 +91,12 @@
         </div>
         <div class="main">
             <div class="inputs">
-                <input type="submit" value="Submit" class="submit">
+                <input type="submit" value="Submit" id="submit" class="submit" onclick="myFunction()">
             </div>
         </div>
     </form>        
         
-    <div class="container">
+    <div class="container" id="pred">
         {{ prediction_text }}
         <br>
         <a href="/return-code/" download><button class='down'>Download Code</button></a>
@@ -109,6 +109,19 @@
     <footer class="footer">
         <p>Made with &#10084; by <a href="https://vinnovateit.com/">VinnovateIT</a></p>
     </footer>
-
+    <!-- Script
+     <script>
+        document.getElementById("pred").style.display = "none";
+        function myFunction() {
+          var x = document.getElementById("pred");
+          
+          if (x.style.display === "none") {
+            x.style.display = "block";
+          } else {
+            x.style.display = "none";
+          }
+        }
+        </script>
+    -->
 </body>
 </html>
