--- a/templates/index.html
+++ b/templates/index.html
@@ -11,14 +11,14 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="..\static\css\style.css">
     <link rel="icon" href="..\static\icon.ico">       
-    <title>Automatic ML Renderer</title> 
+    <title>ML Assistant</title> 
 </head>
 
 <body>
     <br>
     <div class="header">
-    <a href="https://automatic-ml-rendering.herokuapp.com/"><img src="..\static\icon.png"  class='icon'></a>
-    <h1 class='heading'>ML Renderer</h1>
+    <a href="https://ml-assistant.herokuapp.com/"><img src="..\static\icon.png"  class='icon'></a>
+    <h1 class='heading'>Assistant</h1>
     <br>
     </div>
     
@@ -26,7 +26,7 @@
     <br>
     <div class="desc">
         <p>
-            <h2>The TIME has come for you to bring Machine Learning to LIFE.</h2>
+            <h2>One stop solution from training to integration.</h2>
         <h3>You can now just add your dataset and get pre-trained model with the code.</h3>
         Even if you don't know to write a single line of code, you can get machine learning code rendered following just a few steps.
         <br>
