Footer link fixed

--- a/templates/model.html
+++ b/templates/model.html
@@ -107,7 +107,7 @@
     </div>
 
     <footer class="footer">
-        <p>Made with &#10084; by <a href="https://vinnovateit.com/">VinnovateIT</a></p>
+        <p>Made with &#10084; by <a href="https://vinnovateit.com/" id="footerlink">VinnovateIT</a></p>
     </footer>
     <!-- Script
      <script>
