--- a/templates/index.html
+++ b/templates/index.html
@@ -63,7 +63,7 @@
     </div>
     
     <footer class="footer" id="index_footer">
-        <p>Made with &#10084; by <a href="https://vinnovateit.com/">VinnovateIT</a></p>
+        <p>Made with &#10084; by <a href="https://vinnovateit.com/" id="footerlink">VinnovateIT</a></p>
     </footer>
 
     
